Using correct properties comments

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-//erreurs
+# erreurs
 ContainsTooLargeText = darf nicht \u00fcbersteigen 
 Characters = Zeichen
 
@@ -37,13 +37,12 @@ removeImage = Bild l\u00f6schen
 
 SelectValue = Wert ausw\u00e4hlen
 
-// filtres
+# filtres
 eq =
 le = (vor dem)
 ge = (nach dem)
 
-//Wysiwyg
-FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00e4nglich 
+# FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00e4nglich 
 FormatText = Text in welcher Schriftart formatiert? 
 FormatColor = Text in welcher Farbe formatiert? 
 Paragraph = Abschnitt
@@ -64,7 +63,7 @@ WYSIWYG = Normal-Modus
 HTML = HTML-Modus 
 RemoveHtmlTags = Folgende HTML-Tags l\u00f6schen und best\u00e4tigen: 
 RememberHtml = Im HTML-Modus darauf achten, zu ersetzen  
-Brackets = die Tags \u003C und \u003E durch &lt\u003B und &gt\u003B
+Brackets = die Tags < und > durch &lt; und &gt;
 Bold = Fett
 Italic = Kursiv
 Underline = Unterstrichen
