--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -21,7 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-//erreurs
+
+# erreurs
 ContainsTooLargeText = is limited to
 Characters = characters
 
@@ -36,12 +37,12 @@ removeImage = Remove this image
 
 SelectValue = Select a value
 
-// filtres
+# filtres
 eq =
 le = (before)
 ge = (after)
 
-//Wysiwyg
+# Wysiwyg
 FormattingToolbar = 
 FormatText = 
 FormatColor = 
