--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -36,7 +36,7 @@ JSPP.webPage = URL
 JSPP.selectPeas = Wahl eines Service
 JSPP.spaceHomePage = Startseite des Bereichs
 
-JSPP.update = \u00C4ndern
+JSPP.update = \u00c4ndern
 JSPP.updateHomePage = Startseite
 
 JSPP.SpaceTemplate = Bereichvorlagen
@@ -76,14 +76,14 @@ JSPP.SpacePanelDeleteTitle = Bereich l\u00f6schen
 JSPP.Choose = W\u00e4hlen Sie...
 JSPP.ModifyStartPage = Startseite \u00e4ndern
 
-//form
+# form
 JSPP.creationSpace = Bereicherstellung
 JSPP.creationSubSpace = Unter-Bereich-Erstellung
 JSPP.updateSpace = Bereich\u00e4nderung
 JSPP.creationInstance = Einen Dienst hinzuf\u00fcgen
 JSPP.roleDescription = Beschreibung der Rolle
 
-//erreurs
+# erreurs
 MustContainsText = muss eingegeben werden
 ThisFormContains = Achtung, dieses Formular enth\u00e4lt 
 ContainsTooLargeText = darf nicht \u00fcbersteigen 
@@ -91,55 +91,55 @@ NbMaxTextArea = 2000
 Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
-//messages
-JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00f6schen zu wollen?\\n\\n--\u003E
-JSPP.MessageSuppressionSpaceEnd = \u003C-\\n
+# messages
+JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00f6schen zu wollen?\\n\\n-->
+JSPP.MessageSuppressionSpaceEnd = <-\\n
 JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer l\u00f6schen zu wollen?
-JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00f6schen zu wollen?\\n\\n--\u003E
-JSPP.MessageSuppressionInstanceEnd = \u003C--\\n
+JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00f6schen zu wollen?\\n\\n-->
+JSPP.MessageSuppressionInstanceEnd = <--\\n
 
-//onglets roles
+# onglets roles
 JSPP.Manager = Bereich Verwalter 
 JSPP.admin = Verwalter
 JSPP.publisher = Editor
 JSPP.writer = Schreiber
 JSPP.reader = Leser
 
-// Gestion de l'ordre
+# Gestion de l'ordre
 JSPP.SpaceOrder = Verschiebung des Bereichs
 JSPP.SpacePlace = Verschiebung vor dem Bereich
 JSPP.PlaceLast = Verschieben am Ende
 JSPP.ComponentOrder = Verschiebung des Dienstes
 JSPP.ComponentPlace = Verschiebung vor die Komponente
 
-// position espace, composant
+# position espace, composant
 JSPP.SpacePosition = Dienste anzeigen
 JSPP.NoSpacePosition = W\u00e4hlen Sie die Position
 JSPP.SpacePositionFirst = Nach den Unterr\u00e4umen
 JSPP.SpacePositionLast = Vor den Unterr\u00e4umen
 
-// Deplacement de composant
+# Deplacement de composant
 JSPP.SpaceIn = Verschiebung in dem Bereich
 JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich m\u00fcssen sich in Wartung befinden...
 JSPP.MessageConfirmMovingComponentInSpace = Sind Sie sicher, diese Komponente in diesem Bereich verschieben zu wollen?
 JSPP.ExistingComponentName = Verschiebung unm\u00f6glich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
 JSPP.movingInProgress = Verschiebung l\u00e4uft...
 
-// Copy/Cut/Paste component
+# Copy/Cut/Paste component
 JSPP.CopyOf = Kopie von
 
-//Sauvegarde
+# Sauvegarde
 JSPP.BackupUnlimited = Sichern/Wiederherstellen von Komponenten
 JSPP.BackupSpace = Komponenten des Bereichs sichern/wiederherstellen
 
 JSPP.ErrorComponentCreation = Fehler bei der Erstellung der Komponente
-JSPP.ErrorComponentUpdate = Fehler bei der \u00C4nderung der Komponente
-JSPP.ErrorComponentMessage = \u00DCberpr\u00fcfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
+JSPP.ErrorComponentUpdate = Fehler bei der \u00c4nderung der Komponente
+JSPP.ErrorComponentMessage = \u00dcberpr\u00fcfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
 JSPP.ErrorSpaceCreation = Fehler bei der Erstellung des Bereichs
-JSPP.ErrorSpaceUpdate = Fehler bei der \u00C4nderung des Bereichs
-JSPP.ErrorSpaceMessage = \u00DCberpr\u00fcfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
+JSPP.ErrorSpaceUpdate = Fehler bei der \u00c4nderung des Bereichs
+JSPP.ErrorSpaceMessage = \u00dcberpr\u00fcfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
 
-//Corbeille
+# Corbeille
 JSPP.Bin = R\u00e4ume- und Komponenten-Korb
 JSPP.BinRemoveDate = L\u00f6schdatum
 JSPP.BinRestore = Wiederherstellen
