--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -75,59 +75,59 @@ JSPP.SpacePanelDeleteTitle = Delete a space
 JSPP.Choose = Select...
 JSPP.ModifyStartPage = Modify the homepage
 
-//form
+# form
 JSPP.creationSpace = Create a space
 JSPP.creationSubSpace = Create a sub-space
 JSPP.updateSpace = Update a space
 JSPP.creationInstance = Add an application
 JSPP.roleDescription = Role description
 
-//erreurs
+# erreurs
 MustContainsText = must be completed
 ThisFormContains = Warning! This form contains 
 ContainsTooLargeText = must not contain more than 
 NbMaxTextArea = 2000 
 Characters = characters
-JSPP.MustBeginsByHTTP = must contain an URL starting with http:// or https://
+JSPP.MustBeginsByHTTP = must contain an URL starting with http://  or https://
 
-//messages
+# messages
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
 JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users? 
 JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this application?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
-//onglets roles
+# onglets roles
 JSPP.Manager = Space Managers
 JSPP.admin = Administrators
 JSPP.publisher = Publishers
 JSPP.writer = Writers
 JSPP.reader = Readers
 
-// Gestion de l'ordre
+# Gestion de l'ordre
 JSPP.SpaceOrder = Move space 
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
 JSPP.ComponentOrder = Move application 
 JSPP.ComponentPlace = Move before the application
 
-// order space, application
+# order space, application
 JSPP.SpacePosition = Display application
 JSPP.NoSpacePosition = Select position
 JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
-// Copy/Cut/Paste application
+# Copy/Cut/Paste application
 JSPP.CopyOf = Copy of 
 
-// Deplacement de composant
+# Deplacement de composant
 JSPP.SpaceIn = Move in the space
 JSPP.SpacesNotInMaintenance = The origin and destination space must be in Maintenance mode...
 JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this application in this space?
 JSPP.ExistingComponentName = Move not allowed. An application already has the same name in the destination space.
 JSPP.movingInProgress = Move in progress...
 
-//Sauvegarde
+# Sauvegarde
 JSPP.BackupUnlimited = Backup/Restore applications
 JSPP.BackupSpace = Backup/Restore space's applications
 
@@ -138,7 +138,7 @@ JSPP.ErrorSpaceCreation = Error during the creation of the space
 JSPP.ErrorSpaceUpdate = Error during the updating of the space 
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
-//Corbeille
+# Corbeille
 JSPP.Bin = Spaces and applications bin
 JSPP.BinRemoveDate = Remove date
 JSPP.BinRestore = Restore
