--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JSPP.BackToMainSpacePage = Retour à la page principale de l'espace
+JSPP.BackToMainSpacePage = Retour \u00e0 la page principale de l'espace
 
 JSPP.homepageType = Type de page d'accueil
 
@@ -32,34 +32,34 @@ JSPP.peas = Application
 JSPP.portlet = Portlet
 JSPP.webPage = URL
 
-JSPP.selectPeas = Sélection d'une application
+JSPP.selectPeas = S\u00e9lection d'une application
 JSPP.spaceHomePage = Page d'accueil de l'espace
 
 JSPP.update = Modifier
 JSPP.updateHomePage = Page d'accueil
 
-JSPP.SpaceTemplate = Modèles d'espace
+JSPP.SpaceTemplate = Mod\u00e8les d'espace
 JSPP.NoTemplate = Espace Vide
-JSPP.UPSpaceTemplateProfile = Sélectionner les groupes/utilisateurs à affecter au rôle
+JSPP.UPSpaceTemplateProfile = S\u00e9lectionner les groupes/utilisateurs \u00e0 affecter au r\u00f4le
 
 JSPP.welcome =  Bienvenue sur le module Gestion d'espaces
 
-JSPP.maintenanceTout = La totalité de Silverpeas est en mode Maintenance !
+JSPP.maintenanceTout = La totalit\u00e9 de Silverpeas est en mode Maintenance !
 JSPP.maintenance = Mode Maintenance :
 JSPP.maintenanceStatus = Cet espace est actuellement
 JSPP.maintenanceTxtModeOn = en mode maintenance...
 JSPP.maintenanceModeOn = Actif
-JSPP.maintenanceModeOff = Désactivé
+JSPP.maintenanceModeOff = D\u00e9sactiv\u00e9
 JSPP.maintenanceModeToOn = Activer le mode maintenance
-JSPP.maintenanceModeToOff = Désactiver le mode maintenance
+JSPP.maintenanceModeToOff = D\u00e9sactiver le mode maintenance
 
-JSPP.ProfilePanelCreateTitle = Définir les rôles
-JSPP.ProfilePanelModifyTitle = Modifier le rôle
-JSPP.ProfilePanelDeleteTitle = Supprimer le rôle
+JSPP.ProfilePanelCreateTitle = D\u00e9finir les r\u00f4les
+JSPP.ProfilePanelModifyTitle = Modifier le r\u00f4le
+JSPP.ProfilePanelDeleteTitle = Supprimer le r\u00f4le
 
-JSPP.SpaceProfilePanelCreateTitle = Définir les utilisateurs du rôle
-JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du rôle
-JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du rôle
+JSPP.SpaceProfilePanelCreateTitle = D\u00e9finir les utilisateurs du r\u00f4le
+JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du r\u00f4le
+JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du r\u00f4le
 
 JSPP.ComponentPanelCreateTitle = Ajouter une application
 JSPP.ComponentPanelModifyTitle = Modifier l'application
@@ -67,107 +67,107 @@ JSPP.ComponentPanelDeleteTitle = Supprimer l'application
 JSPP.CopyComponent = Copier l'application
 JSPP.PasteComponent = Coller
 
-JSPP.SubSpacePanelCreateTitle = Créer un sous espace
-JSPP.SpacePanelCreateTitle = Créer un espace
+JSPP.SubSpacePanelCreateTitle = Cr\u00e9er un sous espace
+JSPP.SpacePanelCreateTitle = Cr\u00e9er un espace
 JSPP.SpacePanelModifyTitle = Modifier l'espace
 JSPP.SpacePanelDeleteTitle = Supprimer l'espace
 
-JSPP.Choose = Sélectionnez...
+JSPP.Choose = S\u00e9lectionnez...
 JSPP.ModifyStartPage = Modifier la page d'accueil
 
-//form
-JSPP.creationSpace = Création d'espace
-JSPP.creationSubSpace = Création de sous-espace
+# form
+JSPP.creationSpace = Cr\u00e9ation d'espace
+JSPP.creationSubSpace = Cr\u00e9ation de sous-espace
 JSPP.updateSpace = Modification d'espace
 JSPP.creationInstance = Ajout d'une application
-JSPP.roleDescription = Description du rôle
+JSPP.roleDescription = Description du r\u00f4le
 
-//erreurs
-MustContainsText = doit être renseigné 
+# erreurs
+MustContainsText = doit \u00eatre renseign\u00e9 
 ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas excéder 
+ContainsTooLargeText = ne doit pas exc\u00e9der 
 NbMaxTextArea = 2000 
-Characters = caractères
-JSPP.MustBeginsByHTTP = doit contenir une URL débutant par http:// ou https://
+Characters = caract\u00e8res
+JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http:// ou https://
 
-//messages
-JSPP.MessageSuppressionSpaceBegin = Etes-vous sûr(e) de vouloir supprimer cet espace ?\\n\\n-->
+# messages
+JSPP.MessageSuppressionSpaceBegin = Etes-vous s\u00fbr(e) de vouloir supprimer cet espace ?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Etes-vous sûr(e) de vouloir supprimer les utilisateurs ?
-JSPP.MessageSuppressionInstanceBegin = Etes-vous sûr(e) de vouloir supprimer cette application ?\\n\\n-->
+JSPP.MessageSuppressionSpaceManager = Etes-vous s\u00fbr(e) de vouloir supprimer les utilisateurs ?
+JSPP.MessageSuppressionInstanceBegin = Etes-vous s\u00fbr(e) de vouloir supprimer cette application ?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
-//onglets roles
+# onglets roles
 JSPP.Manager = Managers d'espace 
 JSPP.admin = Gestionnaires
 JSPP.publisher = Publieurs
-JSPP.writer = Rédacteurs
+JSPP.writer = R\u00e9dacteurs
 JSPP.reader = Lecteurs
 
-// Gestion de l'ordre
-JSPP.SpaceOrder = Déplacer l'espace
-JSPP.SpacePlace = Déplacement avant l'espace
-JSPP.PlaceLast = Déplacer en fin
-JSPP.ComponentOrder = Déplacer l'application
-JSPP.ComponentPlace = Déplacement avant l'application
+#  Gestion de l'ordre
+JSPP.SpaceOrder = D\u00e9placer l'espace
+JSPP.SpacePlace = D\u00e9placement avant l'espace
+JSPP.PlaceLast = D\u00e9placer en fin
+JSPP.ComponentOrder = D\u00e9placer l'application
+JSPP.ComponentPlace = D\u00e9placement avant l'application
 
-// position espace, application
+#  position espace, application
 JSPP.SpacePosition = Afficher les applications
-JSPP.NoSpacePosition = Sélectionner la position
-JSPP.SpacePositionFirst = Après les sous-espaces
+JSPP.NoSpacePosition = S\u00e9lectionner la position
+JSPP.SpacePositionFirst = Apr\u00e8s les sous-espaces
 JSPP.SpacePositionLast = Avant les sous-espaces
 
-// Deplacement de application
-JSPP.SpaceIn = Déplacement dans l'espace
-JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent être en maintenance...
-JSPP.MessageConfirmMovingComponentInSpace = Etes-vous sûr de vouloir déplacer cette application dans cet espace ?
-JSPP.ExistingComponentName = Déplacement impossible... Une application portant le même nom existe déja dans l'espace de destination.
-JSPP.movingInProgress = Déplacement en cours...
+#  Deplacement de application
+JSPP.SpaceIn = D\u00e9placement dans l'espace
+JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent \u00eatre en maintenance...
+JSPP.MessageConfirmMovingComponentInSpace = Etes-vous s\u00fbr de vouloir d\u00e9placer cette application dans cet espace ?
+JSPP.ExistingComponentName = D\u00e9placement impossible... Une application portant le m\u00eame nom existe d\u00e9ja dans l'espace de destination.
+JSPP.movingInProgress = D\u00e9placement en cours...
 
-// Copy/Cut/Paste component
+#  Copy/Cut/Paste component
 JSPP.CopyOf = Copie de 
 
-//Sauvegarde
+# Sauvegarde
 JSPP.BackupUnlimited = Sauvegarder/Restaurer des applications
 JSPP.BackupSpace = Sauvegarder/Restaurer des applications de l'espace
 
-JSPP.ErrorComponentCreation = Erreur lors de la création de l'application
+JSPP.ErrorComponentCreation = Erreur lors de la cr\u00e9ation de l'application
 JSPP.ErrorComponentUpdate = Erreur lors de la modification de l'application
-JSPP.ErrorComponentMessage = Vérifiez qu'une autre application de l'espace ne porte pas déjà le même nom !
-JSPP.ErrorSpaceCreation = Erreur lors de la création de l'espace
+JSPP.ErrorComponentMessage = V\u00e9rifiez qu'une autre application de l'espace ne porte pas d\u00e9j\u00e0 le m\u00eame nom !
+JSPP.ErrorSpaceCreation = Erreur lors de la cr\u00e9ation de l'espace
 JSPP.ErrorSpaceUpdate = Erreur lors de la modification de l'espace
-JSPP.ErrorSpaceMessage = Vérifiez qu'un autre espace de même niveau ne porte pas déjà le même nom !
+JSPP.ErrorSpaceMessage = V\u00e9rifiez qu'un autre espace de m\u00eame niveau ne porte pas d\u00e9j\u00e0 le m\u00eame nom !
 
-//Corbeille
+# Corbeille
 JSPP.Bin = Corbeille d'espaces et d'applications
 JSPP.BinRemoveDate = Date de suppression
 JSPP.BinRestore = Restaurer
-JSPP.BinRestoreSelected = Etes-vous sûr(e) de vouloir restaurer les éléments sélectionnés ?
-JSPP.BinDelete = Supprimer définitivement
+JSPP.BinRestoreSelected = Etes-vous s\u00fbr(e) de vouloir restaurer les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s ?
+JSPP.BinDelete = Supprimer d\u00e9finitivement
 JSPP.BinEmpty = La corbeille est vide !
-JSPP.BinDeleteConfirm = Etes-vous sûr(e) de vouloir supprimer définitivement cet élément et tout ce qu'il contient ?
-JSPP.BinDeleteConfirmSelected = Etes-vous sûr(e) de vouloir supprimer définitivement les éléments sélectionnés et tout ce qu'ils contiennent ?
+JSPP.BinDeleteConfirm = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finitivement cet \u00e9l\u00e9ment et tout ce qu'il contient ?
+JSPP.BinDeleteConfirmSelected = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finitivement les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s et tout ce qu'ils contiennent ?
 
-JSPP.publicComponent = Accès public
+JSPP.publicComponent = Acc\u00e8s public
 JSPP.hiddenComponent = Invisible
-JSPP.inheritanceBlockedComponent = Héritage des droits
-JSPP.localRights = Droits spécifiques
-JSPP.inheritedRights = Droits hérités
+JSPP.inheritanceBlockedComponent = H\u00e9ritage des droits
+JSPP.localRights = Droits sp\u00e9cifiques
+JSPP.inheritedRights = Droits h\u00e9rit\u00e9s
 
-JSPP.inheritanceSpaceNotUsed = Ce sous espace n'hérite pas des droits de l'espace.
-JSPP.inheritanceComponentNotUsed = Cette application n'hérite pas des droits de l'espace.
-JSPP.inheritanceSpaceUsed = Ce sous espace hérite des droits de l'espace.
-JSPP.inheritanceComponentUsed = Cette application hérite des droits de l'espace.
+JSPP.inheritanceSpaceNotUsed = Ce sous espace n'h\u00e9rite pas des droits de l'espace.
+JSPP.inheritanceComponentNotUsed = Cette application n'h\u00e9rite pas des droits de l'espace.
+JSPP.inheritanceSpaceUsed = Ce sous espace h\u00e9rite des droits de l'espace.
+JSPP.inheritanceComponentUsed = Cette application h\u00e9rite des droits de l'espace.
 JSPP.click = Cliquez
 JSPP.here = ici
 JSPP.inheritanceToNotUse = pour ne plus utiliser les droits de l'espace.
 JSPP.inheritanceToUse = pour utiliser les droits de l'espace.
 
 JSPP.SpaceAppearance = Apparence
-JSPP.SpaceLook = Thème
+JSPP.SpaceLook = Th\u00e8me
 JSPP.WallPaper = Bandeau
 
 JSPP.inProgress = Traitement en cours !<br/>Veuillez patienter...
-JSPP.parameters = Paramètres
+JSPP.parameters = Param\u00e8tres
 
-JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas préciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
+JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas pr\u00e9ciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
