--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
@@ -66,16 +66,14 @@ assigner = Zuweisen
 
 domainName = Benachrichtigen
 
-DefaultMedia = \u003CStandard-Methode\u003E
+DefaultMedia = <Standard-Methode>
 
 MesNotifications = Meine Benachrichtigungen
 ParametrerNotification = Parametrisierung
 LireNotification = Benachrichtigungs-Box
 Notifier = Senden einer Benachrichtigung
 
-//------------------------------------------------------------------------------------//
-//                  A mettre \u00E0 jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
+# A mettre \u00e0 jour dans le multilang general
 Select = W\u00e4hlen Sie
 Validate = OK
 Cancel = Abbrechen
