--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_fr.properties
@@ -37,22 +37,22 @@ users_dest = Destinataires (utilisateurs)
 groups_dest = Destinataires (groupes)
 users_avail = Utilisateurs disponibles
 groups_avail = Groupes disponibles
-selected = Selectionnés
+selected = Selectionn\u00e9s
 
 Opane_addressees = Assigner les destinataires
 
 BBar_addressees = Destinataires
 
 missingFieldStart = Le champ '
-missingFieldEnd = ' doit être renseigné
+missingFieldEnd = ' doit \u00eatre renseign\u00e9
 
 manualNotification=Notification manuelle
 name=Objet
 type=Type
 usage=Usage
 address=Adresse
-operations=Opérations
-libelle=Libellé
+operations=Op\u00e9rations
+libelle=Libell\u00e9
 requiredFields=Obligatoire
 component= Application
 default=Defaut
@@ -68,14 +68,12 @@ domainName=Notifier
 DefaultMedia=<Methode par defaut>
 
 MesNotifications = Mes notifications
-ParametrerNotification = Paramétrage
-LireNotification = Boîte de notification
+ParametrerNotification = Param\u00e9trage
+LireNotification = Bo\u00eete de notification
 Notifier = Envoi d'une notification
 
-//------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
-Select = Sélectionnez
+# A mettre \u00e0 jour dans le multilang general   
+Select = S\u00e9lectionnez
 Validate = Valider 
 Cancel = Annuler
 Close = Fermer
