--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
@@ -47,14 +47,14 @@ checkOut = Reservieren
 addNewVersion = Eine neue Version erstellen
 newDocumentVersion = Neue Version des Dokumentes
 new_document = Neues Dokument
-browse = Bl\u00E4ttern
+browse = Bl\u00e4ttern
 typeOfVersion = Art der Version
-public = \u00D6ffentlich
+public = \u00d6ffentlich
 archive = Arbeit
 required = obligatorisch
 document = Dokument
-nomVide = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
-pleaseFill = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
+nomVide = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
+pleaseFill = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
 
 allVersions = Alle Versionen...
 
@@ -67,23 +67,23 @@ writerlist.approval = Mit Genehmigung nicht geordnet
 writerlist.simple   = Ohne Genehmigung nicht geordnet
 
 operation.validate = OK
-operation.refuse   = Zur\u00FCckweisen
+operation.refuse   = Zur\u00fcckweisen
 
-// erreurs
+# erreurs
 erreur = Fehler
 champsTropLong = Die Beschreibung ist zu lang
 
 popupTitle = DIVA
-confirmDelete = Wollen Sie dieses Dokument l\u00F6schen?
+confirmDelete = Wollen Sie dieses Dokument l\u00f6schen?
 
-readerlist.ToUserPanel = Liste der Leser \u00E4ndern
-writerlist.ToUserPanel = Liste der Redaktoren \u00E4ndern
-versioning.SelectReaders = V\u00E4hlen sie die Leser Ihrer Datei
-versioning.SelectWriters = V\u00E4hlen sie die Redaktoren Ihrer Datei
+readerlist.ToUserPanel = Liste der Leser \u00e4ndern
+writerlist.ToUserPanel = Liste der Redaktoren \u00e4ndern
+versioning.SelectReaders = V\u00e4hlen sie die Leser Ihrer Datei
+versioning.SelectWriters = V\u00e4hlen sie die Redaktoren Ihrer Datei
 versioning.SaveList = Speichern Sie die Liste der Benutzer und Gruppen als Modell
 versioning.SaveListWriters = Speichern Sie die Liste der Benutzer als Modell
 versioning.ListSaved = Modell der Liste gespeichert... 
-versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schlie\u00DFen Sie diese Datein bevor Sie Sie freigeben.
+versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schlie\u00dfen Sie diese Datein bevor Sie Sie freigeben.
 versioning.warning.checkin.locked.title=Datei gesperrt
 versioning.warning.checkin.locked.force=Force release
 
