--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
@@ -68,7 +68,7 @@ validator = Validator
   operation.validate = Validate
   operation.refuse   = Refuse
 
-// erreurs
+# erreurs
   erreur = Error
   champsTropLong = Description is too long
 
