--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
@@ -22,17 +22,17 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 user = Nom
-writer = R\u00E9dacteur
+writer = R\u00e9dacteur
 validator = Valideur
 type = Type
 name = Nom
 version = Version
 date = Date
 status = Etat
-creator = Cr\u00E9ateur
+creator = Cr\u00e9ateur
 description = Description
 comments = Commentaires
-lockedBy = R\u00E9serv\u00E9 par
+lockedBy = R\u00e9serv\u00e9 par
 at = le
 until = jusqu'au
 waitingValidation = En attente de validation par
@@ -40,10 +40,10 @@ free = Libre
 ok = Valider
 close = Fermer
 cancel = Annuler
-alt = Verrouill\u00E9 par
-checkIn = Lib\u00E9rer
-checkOut = R\u00E9server
-addNewVersion = Cr\u00E9er une nouvelle version
+alt = Verrouill\u00e9 par
+checkIn = Lib\u00e9rer
+checkOut = R\u00e9server
+addNewVersion = Cr\u00e9er une nouvelle version
 newDocumentVersion = Nouvelle version du document
 new_document = Nouveau document
 browse = Parcourir
@@ -59,16 +59,16 @@ allVersions = Toutes les versions...
 
 versions.caption   = Versions
 readerlist.caption = Lecteurs
-writerlist.caption = R\u00E9dacteurs
+writerlist.caption = R\u00e9dacteurs
 
-writerlist.ordered  = Ordonn\u00E9 avec approbation
-writerlist.approval = Non ordonn\u00E9 avec approbation
-writerlist.simple   = Non ordonn\u00E9 sans approbation
+writerlist.ordered  = Ordonn\u00e9 avec approbation
+writerlist.approval = Non ordonn\u00e9 avec approbation
+writerlist.simple   = Non ordonn\u00e9 sans approbation
 
 operation.validate = Valider
 operation.refuse   = Refuser
 
-// erreurs
+# erreurs
 erreur = Erreur
 champsTropLong = La description est trop longue
 
@@ -76,28 +76,28 @@ popupTitle                                              = ___/ Silverpeas&#153; 
 confirmDelete = Voulez vous supprimer ce document ?
 
 readerlist.ToUserPanel = Modifier la liste des lecteurs
-writerlist.ToUserPanel = Modifier la liste des r\u00E9dacteurs
-versioning.SelectReaders = S\u00E9lectionnez les lecteurs de votre fichier
-versioning.SelectWriters = S\u00E9lectionnez les r\u00E9dacteurs de votre fichier
-versioning.SaveList = Sauver la liste des utilisateurs et des groupes comme mod\u00E8le
-versioning.SaveListWriters = Sauver la liste des utilisateurs comme mod\u00E8le
-versioning.ListSaved = Mod\u00E8le de liste sauv\u00E9...
-versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00E9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00E9rer.
-versioning.warning.checkin.locked.title=Fichier verrouill\u00E9
-versioning.warning.checkin.locked.force=Forcer la lib\u00E9ration
+writerlist.ToUserPanel = Modifier la liste des r\u00e9dacteurs
+versioning.SelectReaders = S\u00e9lectionnez les lecteurs de votre fichier
+versioning.SelectWriters = S\u00e9lectionnez les r\u00e9dacteurs de votre fichier
+versioning.SaveList = Sauver la liste des utilisateurs et des groupes comme mod\u00e8le
+versioning.SaveListWriters = Sauver la liste des utilisateurs comme mod\u00e8le
+versioning.ListSaved = Mod\u00e8le de liste sauv\u00e9...
+versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00e9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00e9rer.
+versioning.warning.checkin.locked.title=Fichier verrouill\u00e9
+versioning.warning.checkin.locked.force=Forcer la lib\u00e9ration
 
 versioning.xmlForm.View = Plus...
-versioning.xmlForm.XtraData = Informations compl\u00E9mentaires
-versioning.xmlForm.ToolTip = Informations compl\u00E9mentaires sur
+versioning.xmlForm.XtraData = Informations compl\u00e9mentaires
+versioning.xmlForm.ToolTip = Informations compl\u00e9mentaires sur
 
 versioning.CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
 
 versioning.share = Partager ce fichier
 
-versioning.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
+versioning.checkOutAndDownload = R\u00e9server et t\u00e9l\u00e9charger
 versioning.checkOutAndEditOnline = Editer en ligne
 
 confirm.checkin.message=Voulez-vous enregistrer vos modifications ?
 versioning.checkin.abort=Abandonner mes modifications
 
-versioning.dialog.checkout.nok = Fichier d\u00E9j\u00e0 r\u00E9serv\u00E9 par un autre utilisateur
+versioning.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 par un autre utilisateur
