--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
@@ -22,19 +22,19 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-// agenda
+# agenda
 agenda = Mein Kalender 
 
-// affichage
+# affichage
 jour = Tag 
 semaine = Woche 
 mois = Monat 
 annee = Yahr
 
-// invitations
+# invitations
 listeInvitations = Liste der Einladungen
 
-// Liste de diffusion
+# Liste de diffusion
 listeDiffusion = Liste der Teilnehmer
 listeDiffusionVide = Keinen
 editionListeDiffusion =  Die Teilnehmer einladen
@@ -49,7 +49,7 @@ participationsdeclined = Abgelehnt
 accepterInvitation = Annehmen
 refuserInvitation = Ablehnen
 
-// Categories
+# Categories
 categories = Rubriken 
 listeCategories = Liste der Rubriken
 listeCategoriesVide = Leer 
@@ -57,20 +57,20 @@ categoriesDispo = Verf\u00fcgbare Rubriken
 editionCategories = Rubriken w\u00e4hlen
 toutesCategories = Alle
 
-// Classification
+# Classification
 classification = Art 
 public = &Ouml;ffentlich 
 private = Privat 
 confidential = Vertraulich
 
-// priorite
+# priorite
 priorite = Priorit\u00e4t 
 priorite0 = Undefiniert
 priorite1 = Hoch
 priorite2 = Mittel
 priorite3 = Niedrig
 
-// Operation
+# Operation
 fermer = Schliessen 
 nouvelleNote = Neues Ereignis
 confirmationSuppressionNote = Sind Sie sicher, das Ereignis l\u00f6schen zu wollen?
@@ -84,7 +84,7 @@ ajoutOk = Ajout OK
 majOk = Hinzuf\u00fcgung OK
 suppressionOk = L\u00f6schung OK
 supprimerNote = L\u00f6schen 
-modifierListeDiffusion = \u00C4ndern 
+modifierListeDiffusion = \u00c4ndern 
 trouverCreneau = Eine Verf\u00fcgbarkeit finden
 modifierCategories = Die Rubriken \u00e4ndern
 afficherCalendrier = Kalender anzeigen
@@ -93,7 +93,7 @@ annuler = Abbrechen
 retour = Zur\u00fcck 
 valider = OK
 
-// attribut note
+# attribut note
 editerNote = Bearbeiten eines Ereignisses
 organisateurNote = Organisator
 nomNote = Name
@@ -105,12 +105,12 @@ heureFinNote = Schlusszeit
 sansHoraireSpecifique = Ganzer Tag
 mandatoryFields = Obligatorisch 
 
-// navigation
+# navigation
 precedent = Vorangehend 
 suivant = Nachfolgend
 aujourdhui = Heute
 
-// jour
+# jour
 weekFirstDay = 2
 weekLastDay = 1
 
@@ -130,7 +130,7 @@ jour6 = Freitag
 jour7 = Samstag
 jour1 = Sonntag
 
-// mois
+# mois
 mois0 = Januar
 mois1 = Februar
 mois2 = M\u00e4rz
@@ -144,7 +144,7 @@ mois9 = Oktober
 mois10 = November
 mois11 = Dezember
 
-// erreur
+# erreur
 utilisateurInconnu = Benutzer unbekannt
 saisieErreur = Eingabefehler: 
 dateDebutErreur = Das Anfangsdatum richtig eingeben (z.B.: 01/09/2008)
@@ -168,14 +168,14 @@ ThisFormContains = Achtung, dieses Formular enth\u00e4lt
 Error = Fehler 
 Errors = Fehler 
 
-// RDV
+# RDV
 NewRDV = Neues Rendezvous
 NewRDVcalled = legt f\u00fcr Sie einen neuen Rendezvous-Termin fest, mit dem Titel
 JourRDV = am
 HeureRDV = um
 ThanksToConfirm = Bitte best\u00e4tigen Sie, ob Sie anwesend sein werden oder nicht
 
-//Agenda sharing
+# Agenda sharing
 viewOtherAgenda = Die Agenda eines Benutzers sehen  
 viewCurrentAgenda = Zur\u00fcck zu Ihrer Agenda
 privateEvent = (Privat)
@@ -186,10 +186,10 @@ privateEventLabel = Privat
 publicEventLabel = &Ouml;ffentlich
 allDay = Ganzer Tag
 
-//permalink
+# permalink
 agenda.CopyAgendaLink = Zum Kopieren des Links in die Agenda dieses Benutzers: Rechtsklick, dann "Verkn\u00fcpfung kopieren"
 
-//import
+# import
 agenda.importSettings = Konfiguration des Imports
 agenda.outlookImportOptions = Outlook Import
 agenda.synchroType = Importierung 
@@ -200,8 +200,8 @@ agenda.synchroDelay = Periodizit\u00e4t
 agenda.minutes = Minuten
 agenda.hostName = Mein Computer
 
-//Notifications
-titleUpdate = Benachrichtigung \u00fcber \u00C4nderungen eines Rendezvous
+#Notifications
+titleUpdate = Benachrichtigung \u00fcber \u00c4nderungen eines Rendezvous
 titleDelete = Benachrichtigung zur l\u00f6schung eines Rendezvous
 subject = Ihr Rendezvous benannt 
 with = mit
@@ -209,7 +209,7 @@ delayed = wurde verschoben am
 planned = geplant am
 removed = wurde gel\u00f6scht. 
 
-//Rss
+# Rss
 agenda.agenda = Kalender
 agenda.rssNext = N\u00e4chstes Ereignis
 agenda.rssPrivateEvent = Private Ereignisse
