--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
@@ -21,19 +21,19 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// agenda
+# agenda
 agenda = My diary
 
-// affichage
+# affichage
 jour = Day
 semaine = Week
 mois = Month
 annee = Year
 
-// invitations
+# invitations
 listeInvitations = Invitations
 
-// Liste de diffusion
+# Liste de diffusion
 listeDiffusion = Collaborators
 listeDiffusionVide = Nobody
 editionListeDiffusion = Select collaborators
@@ -48,7 +48,7 @@ participationsdeclined = Refused
 accepterInvitation = Accept
 refuserInvitation = Refuse
 
-// Categories
+# Categories
 categories = Headings
 listeCategories = Headings
 listeCategoriesVide = No heading
@@ -56,20 +56,20 @@ categoriesDispo = Available
 editionCategories = Select heading
 toutesCategories = All
 
-// Classification
+# Classification
 classification = Type
 public = Public
 private = Private
 confidential = Confidential
 
-// priorite
+# priorite
 priorite = Priority
 priorite0 = Unknown
 priorite1 = High
 priorite2 = Normal
 priorite3 = Low
 
-// Operation
+# Operation
 fermer = Close
 nouvelleNote = New event
 confirmationSuppressionNote = Are you sure you want to remove 
@@ -92,7 +92,7 @@ annuler = Cancel
 retour = Go back
 valider = Ok
 
-// attribut note
+# attribut note
 editerNote = Edit an event
 organisateurNote = Organizer
 nomNote = Name
@@ -104,12 +104,12 @@ heureFinNote = End time
 sansHoraireSpecifique = All day
 mandatoryFields = Mandatory
 
-// navigation
+# navigation
 precedent = Previous
 suivant = Next
 aujourdhui = Today
 
-// jour
+# jour
 weekFirstDay = 1
 weekLastDay = 7
  
@@ -129,7 +129,7 @@ jour6 = Friday
 jour7 = Saturday
 jour1 = Sunday
 
-// mois
+# mois
 mois0 = January
 mois1 = February
 mois2 = March
@@ -143,7 +143,7 @@ mois9 = October
 mois10 = November
 mois11 = December
 
-// erreur
+# erreur
 utilisateurInconnu = Unknown user
 saisieErreur = Error : 
 dateDebutErreur = Would you please enter a valid start date (ex : 12/25/2000)
@@ -167,14 +167,14 @@ ThisFormContains = Careful, this form contains
 Error = error 
 Errors = errors 
 
-// RDV
+# RDV
 NewRDV = New appointement
 NewRDVcalled = give you an appointment named 
 JourRDV = the
 HeureRDV = at 
 ThanksToConfirm = Thanks to confirm your attendance
 
-//Agenda sharing
+#Agenda sharing
 viewOtherAgenda = View the diary of another user 
 viewCurrentAgenda = Back to my diary
 privateEvent = (Private)
@@ -185,10 +185,10 @@ privateEventLabel = Private
 publicEventLabel = Public
 allDay = All the day
 
-//permalink
+#permalink
 agenda.CopyAgendaLink = To copy the link to diary of the user : right click then copy shortcut
 
-//import
+#import
 agenda.importSettings = Setting up Outlook import
 agenda.outlookImportOptions = Outlook import
 agenda.synchroType = Import
@@ -200,7 +200,7 @@ agenda.minutes = minutes
 agenda.hostName = My computer
 agenda.CopyPhotoLink = To copy the link to the diary of this user : Right click then 'Copy shortcut'
 
-//Notifications
+#Notifications
 titleUpdate = Notification of event change in the diary
 titleDelete = Notification of event remove in the diary
 subject = Your event in the diary titled
@@ -209,7 +209,7 @@ delayed = has been changed to date
 planned = planned at 
 removed = has been removed. 
 
-//Rss
+#Rss
 agenda.agenda = Diary
 agenda.rssNext = Next events
 agenda.rssPrivateEvent = Private event
@@ -232,7 +232,7 @@ agenda.SynchroIcalCalendar = Import from a remote calendar iCal
 agenda.SynchroRemoteUrl = Remote calendar URL :
 agenda.SynchroRemoteLogin = Login :
 agenda.SynchroRemotePwd = Password :
-agenda.SynchroCharset = Jeu de caractères :
+agenda.SynchroCharset = Jeu de caract\u00e8res :
 agenda.SynchroInProgress = Synchronization in progress...
 
 agenda.SynchroFailed = The synchronization has failed.
