--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
@@ -21,37 +21,42 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-
 clipboard = Zwischenspeicher
-// navigation
-  accueil = Empfang
-  retour = Zur\u00fcck
-// attribut
-  titre = Titel
-  composant = Dienst
-  information = Beschreibung 
-  dateDebut = Beginn der Sichtbarkeit
-  dateFin = Ende der Sichtbarkeit
-  obligatoire = Obligatorisch
-// Presse-papier
-  copier = Kopieren
-  couper = Ausschneiden
-  coller = Einf\u00fcgen
+
+# navigation
+accueil = Empfang
+retour = Zur\u00fcck
+
+# attribut
+titre = Titel
+composant = Dienst
+information = Beschreibung 
+dateDebut = Beginn der Sichtbarkeit
+dateFin = Ende der Sichtbarkeit
+obligatoire = Obligatorisch
+
+# Presse-papier
+copier = Kopieren
+couper = Ausschneiden
+coller = Einf\u00fcgen
 reset = L\u00f6schen
-  fermer = Schliessen
+fermer = Schliessen
 ouvrir = &Ouml;ffnen
-// actions
-  supprimer = L\u00f6schen
-  valider = OK
-  annuler = Abbrechen
-  creation = Erstellen einer QuickInfo
-  edition = \u00C4ndern
-  suppression = L\u00f6schen
-//confirmation
+
+# actions
+supprimer = L\u00f6schen
+valider = OK
+annuler = Abbrechen
+creation = Erstellen einer QuickInfo
+edition = \u00c4ndern
+suppression = L\u00f6schen
+
+# confirmation
 supprimerQIConfirmation = Sind Sie sicher, die QuickInfo l\u00f6schen zu wollen?
-// erreurs
+
+# erreurs
 titreObligatoire = Die QuickInfo kann nicht erstellt werden: Den Namen angeben
 dateDebutAvantDateFin = Die QuickInfo kann nicht erstellt werden: Das Anfangsdatum muss vor dem Enddatum liegen
-  pasteError = Einf\u00fcgen unm\u00f6glich
-  copyError = Kopieren unm\u00f6glich
+pasteError = Einf\u00fcgen unm\u00f6glich
+copyError = Kopieren unm\u00f6glich
 vide =
