--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
@@ -22,25 +22,25 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-// composant
+# composant
 todo = Meine Tasks
 actions = Status
 
-// titre
+# titre
 editionTodo = Bearbeiten einer Task
 
-// action
+# action
 affichierCalendrier = Kalender
 ajouterTache = Erstellen einer Task
 todoDeleteConfirm = Sind Sie sicher, die Task l\u00f6schen zu wollen?
 affecterTodo = Dieser Task Personen zuweisen
 
-// onglets
+# onglets
 mesTaches = Meine Tasks
 suiviAffectation = Zuweisungen
 historique = Vorgeschichte
 
-// attributs du todo
+# attributs du todo
 dueDateToDo = F\u00e4lligkeit
 percentCompletedToDo = Fortschritt
 percentUndefined = Nicht gestartet
@@ -53,20 +53,20 @@ dateFinToDo = Enddatum
 heureFinToDo = Endzeit
 sansHoraireSpecifique = Ohne Zeitangabe
 
-// liste de diffusion
+# liste de diffusion
 editionListeDiffusion = W\u00e4hlen
 
-// Classification
+# Classification
 classification = Klassifizierung
 confidential = Vertraulich //"Hat keinen funktionalen Sinn"
 
-// priorite
+# priorite
 priorite0 = Unbestimmt
 priorite1 = Hoch
 priorite2 = Mittel
 priorite3 = Niedrig
 
-// erreur
+# erreur
 utilisateurInconnu = Benutzer unbekannt
 saisieErreur = Eingabefehler: 
 dateDebutErreur = Anfangsdatum richtig eingeben (z.B. : 01/09/2008)
@@ -85,7 +85,7 @@ Characters = Zeichen nicht \u00fcbersteigen
 
 
 
-// A mettre en general
+# A mettre en general
 retour = Zur\u00fcck 
 ajouter = OK
 mettreAJour = OK
