--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
@@ -21,18 +21,18 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-downloadInProgress = T\u00E9l\u00E9chargement en cours...
-fichierJoint = Fichier \u00E0 joindre
-liaisonTermin\u00E9e = Liaison r\u00E9ussie
+downloadInProgress = T\u00e9l\u00e9chargement en cours...
+fichierJoint = Fichier \u00e0 joindre
+liaisonTermin\u00e9e = Liaison r\u00e9ussie
 liaisonInaccessible = Impossible de trouver le fichier
-nomVide = Le nom du fichier doit \u00EAtre renseign\u00E9.
+nomVide = Le nom du fichier doit \u00eatre renseign\u00e9.
 fichierInexistant = Le fichier n'existe pas !
 Title = Titre
-Up = D\u00E9placer vers le haut
-Down = D\u00E9placer vers le bas
-checkOut = R\u00E9server
-checkIn = Lib\u00E9rer
-readOnly = R\u00E9serv\u00E9 par
+Up = D\u00e9placer vers le haut
+Down = D\u00e9placer vers le bas
+checkOut = R\u00e9server
+checkIn = Lib\u00e9rer
+readOnly = R\u00e9serv\u00e9 par
 at = le
 until = jusqu'au
 
@@ -40,41 +40,38 @@ confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
 CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
 
-attachment.SameFileNameAlreadyCheckout = Vous avez d\u00E9j\u00E0 r\u00E9serv\u00E9 un fichier portant le m\u00EAme nom !<br>Afin d'\u00E9viter d'\u00E9craser d'\u00E9ventuelles modifications, vous ne pouvez pas r\u00E9server simultan\u00E9ment deux fichiers ayant le m\u00EAme nom.
+attachment.SameFileNameAlreadyCheckout = Vous avez d\u00e9j\u00e0 r\u00e9serv\u00e9 un fichier portant le m\u00eame nom !<br>Afin d'\u00e9viter d'\u00e9craser d'\u00e9ventuelles modifications, vous ne pouvez pas r\u00e9server simultan\u00e9ment deux fichiers ayant le m\u00eame nom.
 
-//------------------------------------------------------------------------------------//
-//                  A mettre \u00E0 jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
-
+# A mettre \u00e0 jour dans le multilang general  
 type = Type
 zip = Zipper
-uploadDate = T\u00E9l\u00E9charg\u00E9 le
+uploadDate = T\u00e9l\u00e9charg\u00e9 le
 fermer=Fermer
 forcer=Forcer
 lier = Lier
 
-attachment.notifSubjectLib = Fichier r\u00E9serv\u00E9 : lib\u00E9r\u00E9
-attachment.notifSubjectExpiry = Fichier r\u00E9serv\u00E9 : \u00E9ch\u00E9ance demain
-attachment.notifSubjectAlert = Fichier r\u00E9serv\u00E9 : arrive bient\u00F4t \u00E0 \u00E9ch\u00E9ance
-attachment.notifName = Le fichier r\u00E9serv\u00E9
-attachment.notifUserExpiry = arrive \u00E0 \u00E9ch\u00E9ance de r\u00E9servation demain
-attachment.notifUserAlert = arrivera bient\u00F4t \u00E0 \u00E9ch\u00E9ance de r\u00E9servation
-attachment.notifUserLib = est arriv\u00E9 \u00E0 \u00E9ch\u00E9ance et a \u00E9t\u00E9 lib\u00E9r\u00E9
+attachment.notifSubjectLib = Fichier r\u00e9serv\u00e9 : lib\u00e9r\u00e9
+attachment.notifSubjectExpiry = Fichier r\u00e9serv\u00e9 : \u00e9ch\u00e9ance demain
+attachment.notifSubjectAlert = Fichier r\u00e9serv\u00e9 : arrive bient\u00f4t \u00e0 \u00e9ch\u00e9ance
+attachment.notifName = Le fichier r\u00e9serv\u00e9
+attachment.notifUserExpiry = arrive \u00e0 \u00e9ch\u00e9ance de r\u00e9servation demain
+attachment.notifUserAlert = arrivera bient\u00f4t \u00e0 \u00e9ch\u00e9ance de r\u00e9servation
+attachment.notifUserLib = est arriv\u00e9 \u00e0 \u00e9ch\u00e9ance et a \u00e9t\u00e9 lib\u00e9r\u00e9
 
 attachment.suppressionWhichTranslations = Le fichier "*" que vous souhaitez supprimer dispose de plusieurs traductions.<br/>Que voulez-vous supprimer ?
-attachment.suppressionConfirmation = Etes-vous s\u00FBr(e) de vouloir supprimer le fichier "*" ?
+attachment.suppressionConfirmation = Etes-vous s\u00fbr(e) de vouloir supprimer le fichier "*" ?
 attachment.allTranslations = Toutes les traductions
 
-attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00E9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00E9rer.
+attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00e9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00e9rer.
 
-attachment.xmlForm.Edit = Editer les informations compl\u00E9mentaires
+attachment.xmlForm.Edit = Editer les informations compl\u00e9mentaires
 attachment.xmlForm.View = Plus...
-attachment.xmlForm.ToolTip = Informations compl\u00E9mentaires sur 
+attachment.xmlForm.ToolTip = Informations compl\u00e9mentaires sur 
 attachment.share = Partager ce fichier
 
-attachment.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
+attachment.checkOutAndDownload = R\u00e9server et t\u00e9l\u00e9charger
 attachment.checkOutAndEditOnline = Editer en ligne
 
 attachment.dialog.delete = Supprimer le fichier ?
 
-attachment.dialog.checkout.nok = Fichier d\u00E9j\u00E0 r\u00E9serv\u00E9 ou erreur lors de la r\u00E9servation
+attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
