--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -60,7 +60,7 @@ nomVide = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
 pleaseFill = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
 pleaseFill_single = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen.
 
-// erreurs
+# erreurs
 erreur = Fehler
 champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
 
