--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-// format
+# format
 dateInputFormat = dd.MM.yyyy
 dateOutputFormat = dd.MM.yyyy
 hourOutputFormat = HH:mm
 
-// jour
+# jour
   weekFirstDay = 2
   weekLastDay = 1
   numbersDayOfWeek = 7
@@ -50,7 +50,7 @@ hourOutputFormat = HH:mm
 
   mois0 = Januar
   mois1 = Febraur
-  mois2 = M\u00E4rz
+  mois2 = M\u00e4rz
   mois3 = April
   mois4 = Mai
   mois5 = Juni
@@ -62,7 +62,7 @@ hourOutputFormat = HH:mm
   mois11 = Dezember
 
 
-// erreur
+# erreur
   utilisateurInconnu = Unbekannten Benutzer
 	saisieErreur = Eingabefehler: 
 	dateDebutErreur = Bitte geben Sie das Anfangsdatum richtig ein (z.B.: 01/09/2008)
