--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_en.properties
@@ -21,12 +21,13 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// format
+
+# format
 dateInputFormat = MM/dd/yyyy
 dateOutputFormat = MM/dd/yyyy
 hourOutputFormat = HH:mm
 
-// jour
+# jour
   weekFirstDay = 2
   weekLastDay = 1
   numbersDayOfWeek = 7
@@ -47,7 +48,7 @@ hourOutputFormat = HH:mm
   jour7 = Saturday
   jour1 = Sunday
 
-// mois
+# mois
   mois0 = January
   mois1 = February
   mois2 = March
