--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_en.properties
@@ -72,9 +72,7 @@ ParametrerNotification = Parameter
 LireNotification = Notification box
 Notifier = Sending of a notification
 
-//------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
+# A mettre \u00e0 jour dans le multilang general 
 Select = Select
 Validate = Ok 
 Cancel = Cancel
