--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-// bouton, action, tableau ...
+# bouton, action, tableau ...
 GML.add							= Hinzuf\u00fcgen
 GML.address 						= Adresse
 GML.admin						= Administrator
@@ -178,19 +178,19 @@ GML.yes						        = Ja
 
 GML.noLockedFile           = Keine reservierte Datei!
 
-// Window title
+# Window title
 GML.popupTitle						= Silverpeas
 
 
 GML.trademark						= Copyright 2001-2011 Silverpeas - All Rights Reserved
 
-// Formulaire
+# Formulaire
 
 GML.requiredField					= Obligatorisch
 GML.fromDate						= Von
 GML.toDate						= bis zum
 
-// format
+# format
 GML.dateFormat = dd.MM.yyyy
 GML.dateFormatExemple = dd.mm.yyyy
 GML.hourFormat = HH:mm
@@ -226,7 +226,7 @@ GML.mois9 = Oktober
 GML.mois10 = November
 GML.mois11 = Dezember
 
-//Contr\u00f4le JavaScript
+# Contr\u00f4le JavaScript
 GML.ThisFormContains = Dieses Fomular enth\u00e4lt 
 GML.MustBeFilled = muss ausgef\u00fcllt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
@@ -240,14 +240,14 @@ GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
 GML.MustContainsLettersAndDigitsOnly = sollte nur aus Buchstaben und Zahlen bestehen
 
-//Plan de classement
+# Plan de classement
 GML.PDC = Klassierungsplan
 GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCValidatePosition = Validate diese Position
 GML.PDCDeletePosition = L\u00f6schen Sie die Position
 
-//Contr\u00f4les d'acc\u00e8s
+# Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
 GML.DocumentNotFound = Die Information, die Sie abfragen m\u00f6chten, existiert nicht mehr!
 
@@ -257,7 +257,7 @@ GML.updateDate = Ge\u00e4ndert am
 GML.language = Sprache
 GML.translationRemove = Diese \u00dcbersetzung l\u00f6schen
 
-//Import CSV
+# Import CSV
 GML.csvFile = CSV Datei
 GML.ligne = - Reihe
 GML.colonne = Spalte 
@@ -267,7 +267,8 @@ GML.nbCarMax = Der Wert darf nicht \u00dcberschritten werden
 GML.nbCarMin = Der Wert muss mindestens 
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
-//Export CSV
+
+# Export CSV
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
 GML.ExportInProgress = Export l\u00e4uft ...
