--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -178,12 +178,12 @@ GML.week						= Semaine
 GML.year 						= Ann\u00e9e
 GML.yes						        = Oui
 
-// Titre fen\u00eatre
+# Titre fen\u00eatre
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \\_________________________________________
 
 GML.trademark						= &copy; 2001-2011 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
 
-// Formulaire
+# Formulaire
 GML.thefield						= Le champ
 GML.isRequired						= est obligatoire.
 GML.requiredField					= Obligatoire
@@ -192,7 +192,7 @@ GML.fromDate							= Du
 GML.toDate							= au
 
 
-// format
+# format
 GML.dateFormat = dd/MM/yyyy
 GML.dateFormatExemple = jj/mm/aaaa
 GML.hourFormat = HH:mm
@@ -228,7 +228,7 @@ GML.mois9 = Octobre
 GML.mois10 = Novembre
 GML.mois11 = D\u00e9cembre
 
-//Contr\u00f4le JavaScript
+# Contr\u00f4le JavaScript
 GML.ThisFormContains = Ce formulaire contient
 GML.MustBeFilled = doit \u00eatre renseign\u00e9
 GML.MustContainsNumber = doit contenir un entier
@@ -242,14 +242,14 @@ GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
 GML.MustContainsLettersAndDigitsOnly = doit \u00eatre compos\u00e9 uniquement de lettres et de chiffres
 
-//Plan de classement
+# Plan de classement
 GML.PDC = Plan de Classement
 GML.PDCParam = Param\u00e9trer l'utilisation du PDC
 GML.PDCNewPosition = Ajouter une position...
 GML.PDCValidatePosition = Valider cette position
 GML.PDCDeletePosition = Supprimer la position
 
-//Contr\u00f4les d'acc\u00e8s
+# Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
 GML.DocumentNotFound = L'information que vous souhaitez consulter n'existe plus !
 
@@ -259,7 +259,7 @@ GML.updateDate = Modifi\u00e9 le
 GML.language = Langue
 GML.translationRemove = Supprimer cette traduction
 
-//Import CSV
+# Import CSV
 GML.csvFile = Fichier CSV
 GML.ligne = - Ligne
 GML.colonne = Colonne
@@ -269,7 +269,8 @@ GML.nbCarMax = La valeur ne doit pas d\u00e9passer
 GML.nbCarMin = La valeur doit comporter au moins
 GML.caracteres = caract\u00e8res
 GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
-//Export CSV
+
+# Export CSV
 GML.ExportSucceeded = Export r\u00e9ussi.
 GML.ExportFailed = L'export a \u00e9chou\u00e9.
 GML.ExportInProgress = Export en cours...
