--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_en.properties
@@ -21,25 +21,25 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// composant
+# composant
 todo = My tasks
 actions = Status
 
-// titre
+# titre
 editionTodo = Edit a task
 
-// action
+# action
 affichierCalendrier = Display calendar
 ajouterTache = New Task
 todoDeleteConfirm = Are you sure you want to remove todo
 affecterTodo = Appoint executors
 
-// onglets
+# onglets
 mesTaches = My tasks
 suiviAffectation = Assignments
 historique = Log
 
-// attributs du todo
+# attributs du todo
 nomToDo = Name
 dueDateToDo = Expiry date
 percentCompletedToDo = Progress
@@ -52,23 +52,23 @@ descriptionToDo = Description
 dateDebutToDo = Beginning
 dateFinToDo = Expiry date
 
-// liste de diffusion
+# liste de diffusion
 editionListeDiffusion = Select Executors
 
-// Classification
+# Classification
 classification = Classification
 confidential = Confidential
 
-// priorite
+# priorite
 priorite0 = Not established
 priorite1 = High
 priorite2 = Normal
 priorite3 = Low
 
-// navigation
+# navigation
 retour = Go back
 
-// erreur
+# erreur
 utilisateurInconnu = Unknown user
 saisieErreur = Error: 
 dateDebutErreur = Would you please enter a valid start date (ex : 12/25/2000)
@@ -85,7 +85,7 @@ ContainsTooLargeText = must contain a text smaller than
 NbMaxTextArea = 2000 
 Characters = characters
 
-// A mettre en general
+# A mettre en general
 retour = Back
 ajouter = Ok
 mettreAJour = Update
