--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
@@ -41,17 +41,14 @@ readOnly = Reserviert von
 at = am
 until = bis am
 
-confirm.checkin.message=Wollen Sie die \u00C4nderungen speichern?
+confirm.checkin.message=Wollen Sie die \u00c4nderungen speichern?
 
 CopyLink = Zum Kopieren des Links in diese Datei: Rechtsklick, dann 'Verkn\u00fcpfung kopieren'
 
-attachment.SameFileNameAlreadyCheckout = Sie haben bereits eine Datei mit dem gleichen Namen reserviert!<br>Um zu verhindern, dass eventuelle \u00C4nderungen \u00fcberschrieben werden, k\u00f6nnen Sie nicht gleichzeitig zwei Dateien mit dem gleichen Namen reservieren.
+attachment.SameFileNameAlreadyCheckout = Sie haben bereits eine Datei mit dem gleichen Namen reserviert!<br>Um zu verhindern, dass eventuelle \u00c4nderungen \u00fcberschrieben werden, k\u00f6nnen Sie nicht gleichzeitig zwei Dateien mit dem gleichen Namen reservieren.
 
-//------------------------------------------------------------------------------------//
-//                  A mettre &agrave; jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
-
-modifier = \u00C4ndern 
+# A mettre \u00e0 jour dans le multilang general 
+modifier = \u00c4ndern 
 supprimer = L\u00f6schen 
 fermer = Schliessen
 description = Beschreibung 
@@ -76,9 +73,9 @@ attachment.notifUserExpiry = l\u00e4uft morgen ab
 attachment.notifUserAlert = l\u00e4uft bald ab
 attachment.notifUserLib = ist abgelaufen und wurde freigegeben
 
-attachment.suppressionWhichTranslations = Die Datei "*" Die Sie l\u00f6schen wollen hat mehrere \u00DCbersetzungen.<br/>Was m\u00f6chten Sie l\u00f6schen ?
+attachment.suppressionWhichTranslations = Die Datei "*" Die Sie l\u00f6schen wollen hat mehrere \u00dcbersetzungen.<br/>Was m\u00f6chten Sie l\u00f6schen ?
 attachment.suppressionConfirmation = Sind Sie sicher die Datei "*" l\u00f6schen zu wollen ?
-attachment.allTranslations = Alle \u00DCbersetzungen
+attachment.allTranslations = Alle \u00dcbersetzungen
 
 attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00dfen Sie sie bevor Sie diese freigeben k\u00f6nnen.
 
